[gd_scene load_steps=7 format=3 uid="uid://y40ta11k55cw"]

[ext_resource type="StyleBox" uid="uid://byr8amhnwal4k" path="res://assets/resources/themes/panel.tres" id="2_38aa5"]
[ext_resource type="Script" path="res://scripts/user_interface/level_import.gd" id="2_213re"]
[ext_resource type="Theme" uid="uid://d018ofb37nf7u" path="res://assets/resources/themes/global_theme.tres" id="3_18iy2"]
[ext_resource type="Texture2D" uid="uid://47j3qad85ny6" path="res://assets/ui/paste_icon.png" id="3_w7fk6"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_r00fw"]
bg_color = Color(0.525415, 0.683337, 0.522033, 0.454902)

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_ud3al"]
load_path = "res://.godot/imported/save_icon.png-bb729b418ac7c5fcd58f67cd4ad6fc4c.ctex"

[node name="LevelImport" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_18iy2")
script = ExtResource("2_213re")

[node name="Background" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_r00fw")

[node name="Panel" type="Panel" parent="Background"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -300.0
offset_right = 300.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = ExtResource("2_38aa5")

[node name="VBoxContainer" type="VBoxContainer" parent="Background/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -250.0
offset_right = 250.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="LevelName" type="LineEdit" parent="Background/Panel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0
theme = ExtResource("3_18iy2")
placeholder_text = "Level name"
alignment = 1
max_length = 15
context_menu_enabled = false
shortcut_keys_enabled = false
middle_mouse_paste_enabled = false
selecting_enabled = false
deselect_on_focus_loss_enabled = false
drag_and_drop_selection_enabled = false

[node name="Code" type="Button" parent="Background/Panel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0
focus_mode = 0
theme = ExtResource("3_18iy2")
icon = ExtResource("3_w7fk6")
alignment = 0
text_overrun_behavior = 3
icon_alignment = 2

[node name="HSeparator" type="HSeparator" parent="Background/Panel/VBoxContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
theme_override_constants/separation = 30

[node name="Controls" type="HBoxContainer" parent="Background/Panel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 10
theme_override_constants/separation = 20

[node name="SaveBtn" type="Button" parent="Background/Panel/VBoxContainer/Controls"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 5
focus_mode = 0
theme = ExtResource("3_18iy2")
disabled = true
icon = SubResource("CompressedTexture2D_ud3al")

[connection signal="gui_input" from="Background" to="." method="_on_background_gui_input"]
[connection signal="text_changed" from="Background/Panel/VBoxContainer/LevelName" to="." method="_on_level_name_text_changed"]
[connection signal="pressed" from="Background/Panel/VBoxContainer/Code" to="." method="_on_code_pressed"]
[connection signal="pressed" from="Background/Panel/VBoxContainer/Controls/SaveBtn" to="." method="_on_save_btn_pressed"]
